<!--
  ~  Created by Lars Specht
  ~  Copyright (c) 2022. All rights reserved.
  ~  last modified by me on 03.01.22, 15:00
  ~  project Alarm Clock in module Alarm_Clock.app
  -->

<resources>
    <string name="app_name">Simple Alarm Clock</string>
    <string name="no_active_alarms">No active alarms</string>
    <string name="active_alarms">alarms about to ring</string>
    <string name="countdown_alarms">countdowns</string>
    <string name="about">About</string>
    <string name="version_title">Version</string>
    <string name="rate_title">Rate</string>
    <string name="send_email_title">Send e-mail</string>
    <string name="copyright_lurzapps">Copyright 2021 Lars Specht, Licensed under the Apache License, Version 2.0</string>
    <string name="resources_title">Resources</string>
    <string name="question_concerning_title">Question concerning</string>
    <string name="report_bug_github">Report bug on GitHub</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="app_description">For a better alarm clock experience.</string>
    <string name="loading">Loading</string>
    <string name="timed_alarms">alarms</string>
    <string name="internal_error">internal error</string>
    <string name="alarm_notification_channel_name">Alarms</string>
    <string name="alarm">Alarm</string>
    <string name="snooze">snooze</string>
    <string name="dismiss">dismiss</string>
    <string name="notification_snoozed_alarm">alarm snoozed</string>
    <string name="alarm_expected_notification_channel">Upcoming Alarm</string>
    <string name="alarm_expected">Upcoming alarm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="setting_title_theme">app theme</string>
    <string name="alarm_volume">alarm volume</string>
    <string name="vibrate_on_alarm">vibrate on alarm</string>
    <string name="change_default_ringtone">change default alarm ringtone</string>
    <string name="change_system_wide">only for the app</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="reset_to_standard_system_alarm_sound">Reset to standard system alarm sound</string>
    <string name="after_setting_custom_app_alarm_sound">after setting custom app alarm sound</string>
    <string name="customize_timed_alarm_sound">Customize interval-alarm sounds</string>
    <string name="different_hour_in_the_day_different_alarm_sound">different hour in the day = different alarm settings</string>
    <string-array name="theme_options">
        <item>bright</item>
        <item>dark</item>
        <item>auto</item>
    </string-array>
    <string name="missing_permission">Without the permission given this action cannot be performed.</string>
    <string name="add_alarm">add alarm</string>
    <string name="delete">delete</string>
    <string name="ringtone_changed">Ringtone changed.</string>
    <string name="using_default_system_sound">Using default system alarm sound again.</string>
    <string name="spotify_error_not_installed">Spotify app is not installed!</string>
    <string name="alarm_time_intersects_with_other_alarm">The time you are trying to set intersects with another alarm time.</string>
    <string name="default_alarm_sound">default-sound</string>
    <string name="menu_file">File</string>
    <string name="menu_spotify">Spotify</string>
    <string name="dialog_spotify_picker_title">Enter spotify link</string>
    <string name="dialog_spotify_picker_info_format">
        "Info: The link should have a similar format as"
        "\n> https://open.spotify.com/track/6sPOmDulFtLzfX25zICNrC"
        "\nfor a track; for an album i.e.:"
        "\n> https://open.spotify.com/album/2VuZJsJBPLwg9BeQFQle8G etc."
        "\nThis can be achieved in the Spotify-App by clicking on the three dots next to a song/album/etc. > Share > Copy Link"
    </string>
    <string name="menu_default">Default</string>
    <string name="hard_alarm_disabling">hard alarm-disabling</string>
    <string name="hard_disabling_active">hard-to-disable-alarm</string>
    <string name="cannot_snooze_hard_to_disable_alarm">NO SNOOZING!</string>
    <string name="exit_puzzle_first_msg">HAH YOU WISH! Try again to exit!</string>
    <string name="exit_puzzle_game_start_msg">To exit you have to concentrate more. Slide again when you are told so. For example right now.</string>
    <string name="exit_puzzle_msg_ok">Well done. Wait for the next signal.</string>
    <string name="exit_puzzle_now">Now!</string>
    <string name="exit_puzzle_msg_bad">Too early! Try again!</string>
    <string name="exit_puzzle_enough">Enough. Exit now by sliding.</string>
    <string name="show_tutorial">Show tutorial</string>
    <string name="tutorial_main_msg1">There are three kinds of alarms.</string>
    <string name="tutorial_main_msg2">alarms that are about to ring (active alarms)</string>
    <string name="tutorial_main_msg3">countdowns: as soon as they are clicked on an active alarm will be set with the given delay (i.e. clicking on the 26m countdown will wake you up after a power-nap in exactly 26 minutes)</string>
    <string name="tutorial_main_msg4">and regular alarms, if you click on those, an active alarm will be set exactly to the time they are showing (i.e. clicking on 7:30 will set an alarm at this time)</string>
    <string name="tutorial_main_msg5">btw: with the plus and minus buttons you can set each type of alarm to five minutes earlier or later</string>
    <string name="tutorial_main_msg6">Now we will have a look on the settings.</string>
    <string name="tutorial_settings_msg1">Not much to see here, just some settings you would expect in any alarm app.</string>
    <string name="tutorial_settings_msg2">The interesting part lays here. You don\'t config the alarm settings for alarm individually, rather you can have custom alarm settings for different hours in the day.</string>
    <string name="tutorial_customize_msg1">Here you can add own alarm sounds, can set Spotify songs as alarm sound, etc. Every hour that is not covered by a custom setting will use the default alarm settings.</string>
    <string name="open_spotify">Open spotify</string>
    <string name="no_valid_spotify_link">No valid spotify link</string>
    <string name="loading_dialog_connecting_to_spotify">Connecting to Spotify…</string>
</resources>