<?xml version="1.0" encoding="utf-8"?><!--
  ~  Created by Lars Specht
  ~  Copyright (c) 2021. All rights reserved.
  ~  last modified by me on 14.12.21, 19:04
  ~  project Alarm Clock in module Alarm_Clock.app
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/add_alarm"
        app:showAsAction="always"
        android:icon="@drawable/add" >

        <menu>
            <item
                android:id="@+id/menuConfigAddAlarmDefault"
                android:title="@string/menu_default" />
            <item
                android:id="@+id/menuConfigAddAlarmFile"
                android:title="@string/menu_file" />
            <item
                android:id="@+id/menuConfigAddAlarmSpotify"
                android:title="@string/menu_spotify" />
        </menu>
    </item>
</menu>