<?xml version="1.0" encoding="utf-8"?><!--
  ~  Created by Lars Specht
  ~  Copyright (c) 2021. All rights reserved.
  ~  last modified by me on 28.11.21, 18:26
  ~  project Alarm Clock in module Alarm_Clock.app
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_small_padding">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settingsClickableThemeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_settings_title_height"
                android:gravity="center_vertical|start"
                android:text="@string/setting_title_theme"
                android:textColor="@color/defaultTextColorOnDefaultBackground"
                android:textSize="@dimen/normal_text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settingsTvCurrentTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_settings_subtitle_height"
                android:gravity="center_vertical|start"
                android:paddingStart="@dimen/default_small_side_padding"
                android:textColor="@color/defaultTextColorOnDefaultBackground"
                android:textSize="@dimen/small_text_size"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_tiny_padding"
            android:background="@color/backgroundVariantDark" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_settings_title_height"
            android:layout_marginBottom="@dimen/default_small_padding"
            android:gravity="center_vertical|start"
            android:text="@string/alarm_volume"
            android:textColor="@color/defaultTextColorOnDefaultBackground"
            android:textSize="@dimen/normal_text_size" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/settingsSeekBarAlarmVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_small_padding" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settingsCBVibrateOnAlarm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_min_clickable_view_size"
            android:gravity="center_vertical|start"
            android:text="@string/vibrate_on_alarm"
            android:textColor="@color/defaultTextColorOnDefaultBackground"
            android:textSize="@dimen/normal_text_size" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settingsClickableChangeRingtoneLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_settings_title_height"
                android:gravity="center_vertical|start"
                android:text="@string/change_default_ringtone"
                android:textColor="@color/defaultTextColorOnDefaultBackground"
                android:textSize="@dimen/normal_text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_settings_subtitle_height"
                android:gravity="center_vertical|start"
                android:paddingStart="@dimen/default_small_side_padding"
                android:text="@string/change_system_wide"
                android:textColor="@color/defaultTextColorOnDefaultBackground"
                android:textSize="@dimen/small_text_size"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settingsClickableResetRingtoneLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_settings_title_height"
                android:gravity="center_vertical|start"
                android:text="@string/reset_to_standard_system_alarm_sound"
                android:textColor="@color/defaultTextColorOnDefaultBackground"
                android:textSize="@dimen/normal_text_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_settings_subtitle_height"
                android:gravity="center_vertical|start"
                android:paddingStart="@dimen/default_small_side_padding"
                android:text="@string/after_setting_custom_app_alarm_sound"
                android:textColor="@color/defaultTextColorOnDefaultBackground"
                android:textSize="@dimen/small_text_size"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
